--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -208,19 +208,22 @@ body{
 .site-footer{
     display: flex;    
     flex-direction: row;    
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: #333;
     height: 60px;
     margin-top: auto;
+    padding: 0 0.5rem;
+
 }
 
 .profile-link{    
-    display: flex;
+    display: block;
     flex-direction: row;    
     position: relative;
     width: 30px;
-    margin: 10px auto 10px auto;
-        
+    margin: 10px auto 10px auto;    
+    font-size: .85rem;      
+
 }
 
 main{
